--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,1 +1,47 @@
 /* Ember supports plain CSS out of the box. More info: https://cli.emberjs.com/release/advanced-use/stylesheets/ */
+@import url(https://fonts.googleapis.com/css?family=Lato:300,300italic,400,700,700italic);
+
+/**
+ * Base Elements
+ */
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+div,
+span,
+a,
+button {
+  font-family: 'Lato', 'Open Sans', 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+}
+
+body {
+  background: #f3f3f3;
+}
+
+.img-wrapper {
+  margin: 10px;
+  position: relative;
+  cursor: pointer;
+  width: 200px;
+}
+
+.badge {
+  position: absolute;
+  bottom: 10px;
+  right: 6px;
+  border-radius: 4px;
+  background-color: lightyellow;
+  font-size: 20px;
+}
